# clean-coding-thesis

./: .gitignore  Galithesis.bib  Makefile  README.md  best_coding_practices_index.md  default.latex  galileian_thesis.md
frontespizio/: frontespizio.tex
scripts/refactoring_1/: fishermatrix.py
scripts/refactoring_2/: fishermatrix.py
scripts/refactoring_3/: auxiliary.py  fishermatrix.py  test_fishermatrix.py
scripts/refactoring_4/: detection.py  fishermatrix.py  test_fishermatrix.py  waveforms.py
scripts/testing_1/: testing_1.py
scripts/testing_2/: test_matrix_inverse.py
scripts/testing_3/: test_matrix_inverse.py
scripts/testing_4/: gwfish_matrix_inverse.py  test_matrix_inverse.py
scripts/testing_5/: pyproject.toml  tox.ini
scripts/testing_5/tests/: test_matrix_inverse.py
